<resources>
    <string name="about">About</string>
    <string name="add_new_note">Add New Note</string>
    <string name="note_title">Note Title</string>
    <string name="date_time">Date Time</string>
    <string name="note_text">Note Text</string>
    <string name="android_notes">Android Notes</string>
    <string name="_2021_riddhi_damani">© 2021 Riddhi Damani</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="save_note">save_note</string>
    <string name="no_file">No JSON Note File Present</string>
    <string name="file_name">NotesFile.json</string>
    <string name="app_name">Android Notes</string>
    <string name="no_changes_made">No Changes Made</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note_msg">Note Saved!</string>
    <string name="bck_btn_bye_msg">The Back button was pressed - Bye!</string>
    <string name="note_not_found">Note not found!</string>
    <string name="no_title_warn_msg">Note cannot be saved without title! Do you want to exit without saving?</string>
    <string name="no_title_heading">No Title</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="save_note_title">Save Note</string>
    <string name="save_note_dialog_msg">Your note is not saved! Save Note </string>
</resources>